projects/compiler/test/typechecker/funcdecl/error_return_type_mismatch.out
Error at %FILE_NAME%:1:37
Return type mismatch for function 'foo'
  |  func foo(a: Int, b: String): Bool = b
                                         ^
Expected Bool
but instead found String
